# InfoTriage

./: .codegraph  .continue-here.md  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  USER-PROFILE.md  ccir.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: gsd-dev-preferences.md
.github/workflows/: lint.yml  mypy.yml
.omo/run-continuation/: ses_0f0bdf543ffekOxlIUU44cU2p2.json
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md  architecture.md  concerns.md  index.md  structure.md
.planning/research/: dimefil-cop-cip-evaluation.md  pmesii-citation-ajp01-ajp5.md  pmesii-hybrid-definitions.md  recognized-picture-doctrine.md  spark-model-benchmark-2026-07-09.md  tessoc-taxonomy-correction.md
.planning/seeds/: SEED-001-dynamic-ccir-list.md  SEED-002-ccir-crud-ai-wording.md
.planning/sketches/: MANIFEST.md  WRAP-UP-SUMMARY.md
.spike/: docker-compose.yml  requirements-spike.txt
.spike/r2_dedup/: r2_embed.py  r2_fetch.py  r2_threshold.py
.spike/r4_wiki/: on_demand_article.md  r4_wiki.py  (+1 more)
bridge/: RSS_BRIDGE_NOTES.md  _util.py  gmail_to_atom.py  imap_to_atom.py  yt_to_atom.py
docs/: ARCHITECTURE.md  RESEARCH-REPORT.md
gmail-mcp-server/: Dockerfile  entrypoint.sh
libs/contracts/: pyproject.toml
libs/contracts/src/contracts/: __init__.py  _bus.py  _bus_rabbitmq.py  _codec.py  _events.py  _item.py  _logging.py  _phase11_gates.py  _translation.py  _verify.py  ccir.py  uvicorn-log-config.json  uvicorn_log_config.py
libs/ingest_common/: pyproject.toml
libs/ingest_common/src/ingest_common/: __init__.py  persist.py  runtime.py  timeutil.py  trigger.py
libs/store/: pyproject.toml
libs/store/sql/: 001-schema.sql  002-articles.sql  003-vectors.sql  004-audit.sql  005-stubs.sql  006-enrichment.sql  007-discipline-admiralty.sql  008-translation-cache.sql  009-articles-body.sql
libs/store/src/store/: __init__.py  _atom.py  _blob.py  _inmemory.py  _postgres.py  _protocol.py
opml/: feeds.opml  working.opml
ops/: Makefile  llm-router.py
paperclip/: lib.sh  run.sh  seed.sh  stop.sh
score/: digest.py  fever_triage.py  sab_html.py  triage_score.py
scripts/: build_ccir_vectors.py  ccir_sync.py  check_test_dsn.sh  provision_gmail_oauth.py  regression_pmesii_tessoc.py  regression_test_items.json  seed_sample_data.py  set_newsapi_ttl.py  shadow_run.py  uat_test4_vault.py  uat_test5_email.py  uat_test6_cluster_threshold.py  uat_test7_event.py  uat_test8_semantic.py  uat_test9_threshold_env.py  validate_entity_threshold.py
tests/: __init__.py  conftest.py  test_atom_projection.py  test_bridge_escape.py  test_brief_clustering.py  test_brief_consumer.py  test_brief_main_views.py  test_brief_renderer.py  test_brief_renderer_links.py  test_brief_selects_include_articles_body.py  test_brief_views.py  test_brief_views_links.py  test_build_ccir_vectors.py  test_bus_consume.py  test_bus_rabbitmq.py  test_ccir_registry.py  test_ccir_sync.py  test_ccir_vectors.py  test_check_test_dsn.py  test_contracts.py  test_cross_language_synthesis.py  test_dep_list_superset.py  test_digest_retrofit.py  test_dlq_consumer.py  test_dlq_depth_probe.py  test_dsn_safety.py  test_entities.py  test_ingest_barentswatch.py  test_ingest_common_time.py  test_ingest_gmail.py  test_ingest_idempotency.py  test_ingest_imap.py  test_ingest_imap_pop3.py  test_ingest_obsidian.py  test_ingest_paths.py  test_ingest_telegram.py  test_ingest_youtube.py  test_ntfy_health.py  test_opml_check.py  test_opml_health.py  (+27 more)
(+276 files in other folders)
