[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contracts"
version = "0.1.0"
description = "InfoTriage shared schemas, codec, and bus interface"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
