[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contracts"
version = "0.1.0"
description = "InfoTriage shared schemas, codec, and bus interface"
requires-python = ">=3.11"
# NOTE: `json-log-formatter` is a contracts.setup_logging runtime dep. Since
# every apps/* Dockerfile installs this lib with `--no-deps`, the dep does NOT
# propagate to consumers. Each apps/*/requirements.txt MUST re-list
# `json-log-formatter>=1.1` to keep structured-logging active. (Phase 7 follow-up
# fix: 8 of 9 service requirements.txt files were missing it before.)
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "json-log-formatter>=1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

# Phase 7 07-02: ship the uvicorn JSON log-config as package data so
# `importlib.resources.files("contracts").joinpath("uvicorn-log-config.json")`
# resolves in wheel-installed contracts (not just source-tree editable installs).
[tool.setuptools.package-data]
contracts = ["uvicorn-log-config.json"]
