[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest_common"
version = "0.1.0"
description = "InfoTriage ingest adapter toolkit — shared persist+publish, trigger, and runtime helpers"
requires-python = ">=3.11"
dependencies = [
    "contracts",
    "store",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "aio-pika>=9.6",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
