[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "store"
version = "0.1.0"
description = "InfoTriage persistence layer — Postgres + blob store"
requires-python = ">=3.11"
dependencies = [
    "contracts",
    "psycopg[binary]>=3.3",
    "pgvector>=0.4.2",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]
